--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
 			<label for="description">Description</label>
 			<input type="text" name="description" id="input-description" class="form-control">
 
-			<div class="dropzone dropzone-previews" id="my-awesome-dropzone">
-				<div class="dz-default dz-message">
-					Drop image here.
-				</div>
-			</div>
+			<div class="dropzone dropzone-previews" id="my-awesome-dropzone"></div>
 
 			<div class="form-group">
 				<div class="col-sm-10 col-sm-offset-2">
